Added some 2013-era OEM GPUs

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -63,6 +63,18 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <td align="left">Still sold new, worse than integrated.</td>
 </tr>
 <tr>
+<td align="left">AMD Radeon HD 8490</td>
+<td align="center">2014</td>
+<td align="center">270</td>
+<td align="left">OEM only.</td>
+</tr>
+<tr>
+<td align="left">AMD Radeon R5 240</td>
+<td align="center">2014</td>
+<td align="center">516</td>
+<td align="left">OEM only.</td>
+</tr>
+<tr>
 <td align="left">Nvidia GeForce GT 710</td>
 <td align="center">2014</td>
 <td align="center">636</td>
@@ -81,6 +93,12 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <td align="left">Zotac makes passively cooled versions.</td>
 </tr>
 <tr>
+<td align="left">Nvidia GeForce GT 635</td>
+<td align="center">2013</td>
+<td align="center">826</td>
+<td align="left"></td>
+</tr>
+<tr>
 <td align="left">AMD Radeon R7 240</td>
 <td align="center">2013</td>
 <td align="center">836</td>
@@ -91,6 +109,12 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <td align="center">2013</td>
 <td align="center">1001</td>
 <td align="left">OEM only.</td>
+</tr>
+<tr>
+<td align="left">Nvidia GeForce GT 640</td>
+<td align="center">2011</td>
+<td align="center">1153</td>
+<td align="left"></td>
 </tr>
 <tr>
 <td align="left">AMD Radeon R7 250</td>
@@ -115,6 +139,12 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <td align="center">2012</td>
 <td align="center">1676</td>
 <td align="left">VisionTek low profile card.</td>
+</tr>
+<tr>
+<td align="left">Nvidia GTX 745</td>
+<td align="center">2014</td>
+<td align="center">2205</td>
+<td align="left">OEM only.</td>
 </tr>
 <tr>
 <td align="left">AMD Radeon RX 550</td>
