CSS stylesheet changes, fixed image flow issues, new homepage

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<title>List of low profile GPUs for small form factor PCs (SFFs) | chrystalline µsounds</title>
+	<title>List of low profile GPUs for small form factor PCs (SFFs) | sentimental µsounds</title>
 </head>
 <body>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
 	<div class="container">
-		<div class="title"><a href="/index.htm">chrystalline µsounds</a></div>
+		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
 		<ul>
 			<li><a href="https://github.com/microsounds">my github</a></li>
@@ -20,11 +20,11 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4 — static microblog processor-->
+<!--kagami v0.4.1 — static microblog processor-->
 <!--updated 2020/10/22-->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)</h1>
-<img src="assets/low_profile_gpu.jpg" align="right">
-Last updated on 🌖 Thu, Oct 22nd, 2020.
+<p>🌖 Thu, Oct 22nd, 2020</p>
+<p><img src="assets/low_profile_gpu.jpg" alt="img" /></p>
 <p>For our purposes <strong>“low profile”</strong> refers to cards that are half the height of a normal GPU, not full-height short-length GPUs meant for Mini-ITX cases.
 Think space-saving PCs, small form factor PCs (SFFs), home theater PCs (HTPCs), slimline cases, specialty server hardware, and other niche form-factors.</p>
 <p><em><strong>This is a shortlist of common, rare and/or discontinued low profile 75W PCIe GPUs up to 2 slots wide introduced since 2013.</strong></em>
@@ -242,8 +242,8 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 <hr>
 <div class="footnote">
 	<p>
-		site text CC BY-SA 4.0 — &copy; 2020 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4 — static microblog processor</a>
+		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
 	</p>
 </div>
 </div>
