--- a/404.htm
+++ b/404.htm
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<title>404 Not Found | chrystalline µsounds</title>
+	<title>404 Not Found | sentimental µsounds</title>
 </head>
 <body>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
 	<div class="container">
-		<div class="title"><a href="/index.htm">chrystalline µsounds</a></div>
+		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
 		<ul>
 			<li><a href="https://github.com/microsounds">my github</a></li>
@@ -20,15 +20,15 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4 — static microblog processor-->
+<!--kagami v0.4.1 — static microblog processor-->
 <h1>404 Not Found</h1>
 <p>The static resource or file you requested doesn’t exist.</p>
 <p>There’s nothing here.</p>
 <hr>
 <div class="footnote">
 	<p>
-		site text CC BY-SA 4.0 — &copy; 2020 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4 — static microblog processor</a>
+		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
 	</p>
 </div>
 </div>
