--- a/index.htm
+++ b/index.htm
@@ -5,13 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<title>Home | chrystalline µsounds</title>
+	<title>Homepage | sentimental µsounds</title>
 </head>
 <body>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
 	<div class="container">
-		<div class="title"><a href="/index.htm">chrystalline µsounds</a></div>
+		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
 		<ul>
 			<li><a href="https://github.com/microsounds">my github</a></li>
@@ -20,23 +20,25 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4 — static microblog processor-->
-<h1>Home</h1>
-<p>There isn’t much to speak of at the moment.</p>
-<h2>About Me</h2>
-<p>I like starry night skies, people watching, and the Unix programming environment.</p>
-<h2>Some Links</h2>
+<!--kagami v0.4.1 — static microblog processor-->
+<h1>Homepage</h1>
+<p><img src="https://github.com/microsounds/microsounds/raw/master/profile/bg.png" alt="header" /></p>
+<h3>About Me</h3>
+<p>There isn’t much to say at the moment, I like starry night skies, people watching, and the unix programming environment.</p>
+<h3>Some Links</h3>
 <ul>
 <li>My Dotfiles — <a href="https://github.com/microsounds/atelier">https://github.com/microsounds/atelier</a></li>
+<li>My Website — <a href="https://microsounds.github.io">https://microsounds.github.io</a></li>
 </ul>
-<p><sup>Unless otherwise stated, source code is licensed GPLv3 or later, written content is licensed CC BY-SA 4.0.</sup></p>
+<h3>Contact Me</h3>
+<p>If it’s about a project, feel free to open an issue.</p>
 <div class="index">
 </div>
 <hr>
 <div class="footnote">
 	<p>
-		site text CC BY-SA 4.0 — &copy; 2020 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4 — static microblog processor</a>
+		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
 	</p>
 </div>
 </div>
