--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -8,12 +8,27 @@
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
+<audio id="bgm" loop hidden>
+	<!-- effe - night drive ft. 初音ミク -->
+	<source src="{DOC_ROOT}/static/wind1_loop.opus" type="audio/ogg">
+	<script>
+	function play() {
+		var btn = document.getElementById('bgm_toggle');
+		var bgm = document.getElementById('bgm');
+		if (bgm.paused)
+			btn.innerText = btn.innerText.replace('play', 'pause'), bgm.play();
+		else
+			btn.innerText = btn.innerText.replace('pause', 'play'), bgm.pause();
+	}
+	</script>
+</audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{AVATAR}"></a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
 		<div class="subtitle">{SITE_SUBTITLE}</div>
 		<ul>
+			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="{GIT_REMOTE}">my github</a></li>
 			<li><a href="{DOC_ROOT}/notes/index.htm">notes</a></li>
 		</ul>
