Moved JS to it's own file

--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -5,22 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
+	<script src="/static/script.js"></script>
 	<title>List of low profile GPUs for small form factor PCs (SFFs) | sentimental µsounds</title>
 </head>
 <body>
 <audio id="bgm" loop hidden>
 	<!-- effe - night drive ft. 初音ミク -->
 	<source src="/static/wind1_loop.opus" type="audio/ogg">
-	<script>
-		function play() {
-			var btn = document.getElementById('bgm_toggle');
-			var bgm = document.getElementById('bgm');
-			if (bgm.paused)
-				btn.innerText = btn.innerText.replace('play', 'pause'), bgm.play();
-			else
-				btn.innerText = btn.innerText.replace('pause', 'play'), bgm.pause();
-		}
-	</script>
 </audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
