--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -5,22 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" type="image/x-icon" href="{DOC_ROOT}/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="{DOC_ROOT}/static/style.css">
+	<script src="{DOC_ROOT}/static/script.js"></script>
 	<title>{TITLE} | {SITE_TITLE}</title>
 </head>
 <body>
 <audio id="bgm" loop hidden>
 	<!-- effe - night drive ft. 初音ミク -->
 	<source src="{DOC_ROOT}/static/wind1_loop.opus" type="audio/ogg">
-	<script>
-	function play() {
-		var btn = document.getElementById('bgm_toggle');
-		var bgm = document.getElementById('bgm');
-		if (bgm.paused)
-			btn.innerText = btn.innerText.replace('play', 'pause'), bgm.play();
-		else
-			btn.innerText = btn.innerText.replace('pause', 'play'), bgm.pause();
-	}
-	</script>
 </audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{AVATAR}"></a>
