Added static assets

--- a/404.htm
+++ b/404.htm
@@ -14,7 +14,7 @@
 	<source src="/static/wind1_loop.opus" type="audio/ogg">
 </audio>
 <div class="navbar">
-	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
+	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
