--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 	<source src="/static/wind1_loop.opus" type="audio/ogg">
 </audio>
 <div class="navbar">
-	<a href="/index.htm"><img class="avatar" alt="avatar" src="https://avatars3.githubusercontent.com/u/15962566"></a>
+	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
 	<div class="container">
 		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
@@ -28,7 +28,7 @@
 <div class="content">
 <!--kagami v0.4.1 — static microblog processor-->
 <h1>Homepage</h1>
-<p><img src="https://github.com/microsounds/microsounds/raw/master/profile/bg.png" alt="header" /></p>
+<p><img src="/static/starry.png" alt="header" /></p>
 <h3>About Me</h3>
 <p>There isn’t much to say at the moment, I like starry night skies, people watching, and the unix programming environment.</p>
 <h3>Some Links</h3>
