--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -14,7 +14,7 @@
 	<source src="{DOC_ROOT}/static/wind1_loop.opus" type="audio/ogg">
 </audio>
 <div class="navbar">
-	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{AVATAR}"></a>
+	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"></a>
 	<div class="container">
 		<div class="title"><a href="{DOC_ROOT}/index.htm">{SITE_TITLE}</a></div>
 		<div class="subtitle">{SITE_SUBTITLE}</div>
