kagami 0.4.2 changes, stylesheet, homepage

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html public "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,8 +10,7 @@
 </head>
 <body>
 <audio id="bgm" loop hidden>
-	<!-- effe - night drive ft. 初音ミク -->
-	<source src="{DOC_ROOT}/static/wind1_loop.opus" type="audio/ogg">
+	<source type="audio/ogg" src="{DOC_ROOT}/static/wind1_loop.opus">
 </audio>
 <div class="navbar">
 	<a href="{DOC_ROOT}/index.htm"><img class="avatar" alt="avatar" src="{DOC_ROOT}/static/avatar.png"></a>
