--- a/index.htm
+++ b/index.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html public "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,8 +10,7 @@
 </head>
 <body>
 <audio id="bgm" loop hidden>
-	<!-- effe - night drive ft. 初音ミク -->
-	<source src="/static/wind1_loop.opus" type="audio/ogg">
+	<source type="audio/ogg" src="/static/wind1_loop.opus">
 </audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
@@ -26,26 +25,35 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4.1 — static microblog processor-->
+<!--kagami v0.4.2 — static microblog processor-->
 <h1>Homepage</h1>
 <p><img src="/static/starry.png" alt="header" /></p>
-<h3>About Me</h3>
-<p>There isn’t much to say at the moment, I like starry night skies, people watching, and the unix programming environment.</p>
-<h3>Some Links</h3>
+<h3>About me</h3>
+<p>There isn’t much to say at the moment, you can call me <code>microsounds</code> if you want.</p>
+<p>I like starry night skies, people watching and the unix programming environment.</p>
+<h3>Things I made recently</h3>
 <ul>
-<li>My Dotfiles — <a href="https://github.com/microsounds/atelier">https://github.com/microsounds/atelier</a></li>
-<li>My Website — <a href="https://microsounds.github.io">https://microsounds.github.io</a></li>
+<li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a></li>
+<li><em>(2020–present)</em> static microblog processor in POSIX sh — <a href="https://github.com/microsounds/kagami"><code>microsounds/kagami</code></a></li>
+<li><em>(2019–present)</em> this website and it’s kagami template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a></li>
 </ul>
-<h3>Contact Me</h3>
+<h3>Old projects</h3>
+<ul>
+<li><em>(2016–2017)</em> <em><strong>[retired]</strong></em> lightweight futaba-like messageboard system in C — <a href="https://github.com/microsounds/akari-bbs"><code>microsounds/akari-bbs</code></a></li>
+<li><em>(2016)</em> CPU-based tripcode generator for futaba-like imageboards — <a href="https://github.com/microsounds/tripforce"><code>microsounds/tripforce</code></a></li>
+<li><em>(2016)</em> <em><strong>[retired]</strong></em> command-line utility for scraping Bandcamp albums — <a href="https://github.com/microsounds/bc-dl"><code>microsounds/bc-dl</code></a></li>
+<li><em>(2016)</em> command-line stack-based RPN calculator — <a href="https://github.com/microsounds/hpsh"><code>microsounds/hpsh</code></a></li>
+</ul>
+<h3>Contact me</h3>
 <p>If it’s about a project, feel free to open an issue.</p>
 <div class="index">
 </div>
 <hr>
 <div class="footnote">
-	<p>
-		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
-	</p>
+<p>
+site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.2 — static microblog processor</a>
+</p>
 </div>
 </div>
 </body>
