--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html public "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,8 +10,7 @@
 </head>
 <body>
 <audio id="bgm" loop hidden>
-	<!-- effe - night drive ft. 初音ミク -->
-	<source src="/static/wind1_loop.opus" type="audio/ogg">
+	<source type="audio/ogg" src="/static/wind1_loop.opus">
 </audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
@@ -26,7 +25,7 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4.1 — static microblog processor-->
+<!--kagami v0.4.2 — static microblog processor-->
 <!--updated 2020/10/22-->
 <h1>List of low profile GPUs for small form factor PCs (SFFs)</h1>
 <p>🌖 Thu, Oct 22nd, 2020</p>
@@ -247,10 +246,10 @@ In this case, you’d have to run a 2-slot 16x card in the much smaller 4x PCIe 
 </table>
 <hr>
 <div class="footnote">
-	<p>
-		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
-	</p>
+<p>
+site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.2 — static microblog processor</a>
+</p>
 </div>
 </div>
 </body>
