--- a/404.htm
+++ b/404.htm
@@ -1,4 +1,4 @@
-<!DOCTYPE html public "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!DOCTYPE html>
 <html lang="en-US">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -10,8 +10,7 @@
 </head>
 <body>
 <audio id="bgm" loop hidden>
-	<!-- effe - night drive ft. 初音ミク -->
-	<source src="/static/wind1_loop.opus" type="audio/ogg">
+	<source type="audio/ogg" src="/static/wind1_loop.opus">
 </audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
@@ -26,16 +25,16 @@
 	</div>
 </div>
 <div class="content">
-<!--kagami v0.4.1 — static microblog processor-->
+<!--kagami v0.4.2 — static microblog processor-->
 <h1>404 Not Found</h1>
 <p>The static resource or file you requested doesn’t exist.</p>
 <p>There’s nothing here.</p>
 <hr>
 <div class="footnote">
-	<p>
-		site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
-		Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.1 — static microblog processor</a>
-	</p>
+<p>
+site text CC BY-SA 4.0 — &copy; 2021 microsounds &lt;<a href="https://github.com/microsounds">https://github.com/microsounds</a>&gt;<br>
+Powered by <a href="https://github.com/microsounds/kagami">kagami v0.4.2 — static microblog processor</a>
+</p>
 </div>
 </div>
 </body>
