--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
 <h3>About me</h3>
 <p>There isn’t much to say at the moment, you can call me <code>microsounds</code> if you want.</p>
 <p>I like starry night skies, people watching and the unix programming environment.</p>
-<h3>Things I made recently</h3>
+<h3>Things I’ve made recently</h3>
 <ul>
 <li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a></li>
 <li><em>(2020–present)</em> static microblog processor in POSIX sh — <a href="https://github.com/microsounds/kagami"><code>microsounds/kagami</code></a></li>
