--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -9,9 +9,7 @@
 	<title>List of low profile GPUs for small form factor PCs (SFFs) | sentimental µsounds</title>
 </head>
 <body>
-<audio id="bgm" loop hidden>
-	<source type="audio/ogg" src="/static/wind1_loop.opus">
-</audio>
+<audio id="bgm" loop="true" hidden="true" type="audio/ogg" src="/static/wind1_loop.opus"></audio>
 <div class="navbar">
 	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
 	<div class="container">
