--- a/notes/low-profile-gpus-for-sff-pcs.htm
+++ b/notes/low-profile-gpus-for-sff-pcs.htm
@@ -18,6 +18,7 @@
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
+			<li><a href="/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
