--- a/index.htm
+++ b/index.htm
@@ -46,6 +46,9 @@
 <h3>Contact me</h3>
 <p>If it’s about a project, feel free to open an issue.</p>
 <div class="index">
+<ul>
+<li><a href="dotfiles.htm">My dotfiles</a> — <em>June 2021</em></li>
+</ul>
 </div>
 <hr>
 <div class="footnote">
