Make modification times reflect actual git repo

--- a/dotfiles.htm
+++ b/dotfiles.htm
@@ -27,7 +27,7 @@
 <!--kagami v0.4.2 — static microblog processor-->
 <h1>My dotfiles</h1>
 <p>This document is also available at <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on Github.</p>
-<p>Last updated 🌓 Thu, Jul 1st, 2021.</p>
+<p>Last updated 🌒 Wed, Jun 30th, 2021.</p>
 <h1><div align="center"><em>dotfiles—“atelier”</em><img src="https://github.com/microsounds/microsounds/raw/master/dotfiles/shimeji.png" alt="shimeji" /></div></h1>
 <div align="center">
 	<img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github">
@@ -498,7 +498,7 @@ lrwxrwxrwx 1   29  .local/bin/xwin-widgets -> ../../Scripts/xwin_widgets.sh
 -rw-r--r-- 1 1.4K   2021-06-22 13:39:03 -0700 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xinitrc">.xinitrc</a>
 -rw-r--r-- 1 1.7K   2021-05-03 17:14:44 -0700 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xresources">.xresources</a>
 </code></pre>
-<!-- updated 2021-07-01 -->
+<!-- updated 2021-06-30 -->
 <hr>
 <div class="footnote">
 <p>
