moved dotfiles docs to notes/

--- a/.kagami/head.htm
+++ b/.kagami/head.htm
@@ -18,7 +18,7 @@
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="{GIT_REMOTE}">my github</a></li>
-			<li><a href="{DOC_ROOT}/dotfiles.htm">my dotfiles</a></li>
+			<li><a href="{DOC_ROOT}/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="{DOC_ROOT}/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
