--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
-			<li><a href="/dotfiles.htm">my dotfiles</a></li>
+			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
@@ -32,8 +32,16 @@
 <p>I like starry night skies, people watching and the unix programming environment.</p>
 <h3>Things I’ve made recently</h3>
 <ul>
-<li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a></li>
-<li><em>(2020–present)</em> static microblog processor in POSIX sh — <a href="https://github.com/microsounds/kagami"><code>microsounds/kagami</code></a></li>
+<li><em>(2019–present)</em> my “graphical shell” computing environment — <a href="/notes/dotfiles.htm"><code>microsounds/atelier</code></a>
+<ul>
+<li><em>A self-contained collection of dotfiles and scripts for Debian GNU/Linux.</em></li>
+</ul>
+</li>
+<li><em>(2020–present)</em> static microblog processor in POSIX sh — <a href="https://github.com/microsounds/kagami"><code>microsounds/kagami</code></a>
+<ul>
+<li><em>A user-extensible macro preprocessor and generator for creating static webpages and blog sites.</em></li>
+</ul>
+</li>
 <li><em>(2019–present)</em> this website and it’s kagami template — <a href="https://github.com/microsounds/microsounds.github.io"><code>microsounds/microsounds.github.io</code></a></li>
 </ul>
 <h3>Old projects</h3>
@@ -46,9 +54,6 @@
 <h3>Contact me</h3>
 <p>If it’s about a project, feel free to open an issue.</p>
 <div class="index">
-<ul>
-<li><a href="dotfiles.htm">My dotfiles</a> — <em>June 2021</em></li>
-</ul>
 </div>
 <hr>
 <div class="footnote">
