--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -6,7 +6,7 @@
 	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
 	<link rel="stylesheet" type="text/css" href="/static/style.css">
 	<script src="/static/script.js"></script>
-	<title>My dotfiles | sentimental µsounds</title>
+	<title>Selected documentation and usage notes for my dotfiles | sentimental µsounds</title>
 </head>
 <body>
 <audio id="bgm" loop="true" hidden="true" type="audio/ogg" src="/static/wind1_loop.opus"></audio>
@@ -18,14 +18,14 @@
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
-			<li><a href="/dotfiles.htm">my dotfiles</a></li>
+			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
 </div>
 <div class="content">
 <!--kagami v0.4.2 — static microblog processor-->
-<h1>My dotfiles</h1>
+<h1>Selected documentation and usage notes for my dotfiles</h1>
 <p>This document is also available at <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on Github.</p>
 <p>Last updated 🌒 Wed, Jun 30th, 2021.</p>
 <h1><div align="center"><em>dotfiles—“atelier”</em><img src="https://github.com/microsounds/microsounds/raw/master/dotfiles/shimeji.png" alt="shimeji" /></div></h1>
