--- a/notes/index.htm
+++ b/notes/index.htm
@@ -18,7 +18,7 @@
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
-			<li><a href="/dotfiles.htm">my dotfiles</a></li>
+			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
 			<li><a href="/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
@@ -29,6 +29,7 @@
 <p>Miscellaneous writings, sorted by date.</p>
 <div class="index">
 <ul>
+<li><a href="dotfiles.htm">Selected documentation and usage notes for my dotfiles</a> — <em>June 2021</em></li>
 <li><a href="low-profile-gpus-for-sff-pcs.htm">List of low profile GPUs for small form factor PCs (SFFs)</a> — <em>October 2020</em></li>
 </ul>
 </div>
