--- a/notes/dotfiles.htm
+++ b/notes/dotfiles.htm
@@ -27,7 +27,7 @@
 <!--kagami v0.4.2 — static microblog processor-->
 <h1>Selected documentation and usage notes for my dotfiles</h1>
 <p>This document is also available at <a href="https://github.com/microsounds/atelier"><code>microsounds/atelier</code></a> on Github.</p>
-<p>Last updated 🌓 Sat, Jul 3rd, 2021.</p>
+<p>Last updated 🌕 Sat, Jul 10th, 2021.</p>
 <h1><div align="center"><em>dotfiles—“atelier”</em><img src="https://github.com/microsounds/microsounds/raw/master/dotfiles/shimeji.png" alt="shimeji" /></div></h1>
 <div align="center">
 	<img src="https://img.shields.io/github/commit-activity/m/microsounds/atelier?logo=github">
@@ -423,7 +423,7 @@ This directory is appended to <code>$C_INCLUDE_PATH</code> at login.</p>
 -rw-r--r-- 1 6.0K   Jun 22 2021 18:30 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.bashrc">.bashrc</a>
 -rw-r--r-- 1 1.1K   Jul  3 2021 21:48 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts">.comforts</a>
 -rw-r--r-- 1  271   Apr 29 2021 21:37 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.comforts-git">.comforts-git</a>
--rw-r--r-- 1  177   Jul  3 2021 23:09 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/chromium/local_state.conf">.config/chromium/local_state.conf</a>
+-rw-r--r-- 1  234   Jul 10 2021 17:48 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/chromium/local_state.conf">.config/chromium/local_state.conf</a>
 -rw-r--r-- 1  393   Jul  3 2021 23:09 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/chromium/preferences.conf">.config/chromium/preferences.conf</a>
 -rw-r--r-- 1 6.2K   Jun  4 2021 00:40 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/dwm/config.h">.config/dwm/config.h</a>
 -rw-r--r-- 1  362   Feb 13 2020 01:04 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.config/dwm/patches/monocle-indicator.patch">.config/dwm/patches/monocle-indicator.patch</a>
@@ -445,11 +445,12 @@ This directory is appended to <code>$C_INCLUDE_PATH</code> at login.</p>
 -rwxr-xr-x 1  650   Jun 18 2021 00:06 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/conf-append">.local/bin/conf-append</a>
 -rwxr-xr-x 1  477   Jun  7 2020 18:13 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/extern">.local/bin/extern</a>
 -rwxr-xr-x 1   85   Jul 15 2020 17:12 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/feh">.local/bin/feh</a>
--rwxr-xr-x 1 2.0K   Jun 28 2021 20:44 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/genshin-impact">.local/bin/genshin-impact</a>
+-rwxr-xr-x 1 2.1K   Jul  4 2021 01:04 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/genshin-impact">.local/bin/genshin-impact</a>
 -rwxr-xr-x 1  162   Mar 30 2021 13:19 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/is-chromebook">.local/bin/is-chromebook</a>
 -rwxr-xr-x 1   91   Mar 30 2021 13:19 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/is-container">.local/bin/is-container</a>
 -rwxr-xr-x 1  100   Jul 15 2020 17:12 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/make">.local/bin/make</a>
 -rwxr-xr-x 1  258   Mar 30 2021 13:19 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/mk-tempdir">.local/bin/mk-tempdir</a>
+-rwxr-xr-x 1 1.3K   Jul 10 2021 17:44 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/moonphase">.local/bin/moonphase</a>
 -rwxr-xr-x 1  153   Mar 30 2021 13:19 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.local/bin/mpv">.local/bin/mpv</a>
 lrwxrwxrwx 1   29  .local/bin/nano-overlay -> ../../Scripts/nano_overlay.sh
 lrwxrwxrwx 1   27  .local/bin/path-gitstatus -> ../../Scripts/git_status.sh
@@ -498,7 +499,7 @@ lrwxrwxrwx 1   29  .local/bin/xwin-widgets -> ../../Scripts/xwin_widgets.sh
 -rw-r--r-- 1  136   Feb 16 2021 22:46 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.scrc">.scrc</a>
 -rwxr-xr-x 1 3.3K   Mar 15 2021 11:34 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/git_status.sh">Scripts/git_status.sh</a>
 -rwxr-xr-x 1  15K   Jun 22 2021 18:44 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/nano_overlay.sh">Scripts/nano_overlay.sh</a>
--rwxr-xr-x 1 5.3K   Apr  7 2021 16:39 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/wm_status.sh">Scripts/wm_status.sh</a>
+-rwxr-xr-x 1 4.5K   Jul 10 2021 17:44 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/wm_status.sh">Scripts/wm_status.sh</a>
 -rwxr-xr-x 1 1.8K   May  4 2021 22:40 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xrandr_cycle.sh">Scripts/xrandr_cycle.sh</a>
 -rwxr-xr-x 1 1.7K   May  5 2021 14:33 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_decor.sh">Scripts/xwin_decor.sh</a>
 -rwxr-xr-x 1 1.3K   May 11 2021 15:58 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/Scripts/xwin_webm.sh">Scripts/xwin_webm.sh</a>
@@ -507,7 +508,7 @@ lrwxrwxrwx 1   29  .local/bin/xwin-widgets -> ../../Scripts/xwin_widgets.sh
 -rw-r--r-- 1 1.4K   Jun 22 2021 13:39 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xinitrc">.xinitrc</a>
 -rw-r--r-- 1 1.7K   May  3 2021 17:14 <a href="https://raw.githubusercontent.com/microsounds/atelier/master/.xresources">.xresources</a>
 </code></pre>
-<!-- updated 2021-07-03 -->
+<!-- updated 2021-07-10 -->
 <hr>
 <div class="footnote">
 <p>
