--- a/404.htm
+++ b/404.htm
@@ -3,23 +3,23 @@
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="shortcut icon" type="image/x-icon" href="/static/doki.ico">
-	<link rel="stylesheet" type="text/css" href="/static/style.css">
-	<script src="/static/script.js"></script>
+	<link rel="shortcut icon" type="image/x-icon" href="/home/microsounds/Git/microsounds.github.io/static/doki.ico">
+	<link rel="stylesheet" type="text/css" href="/home/microsounds/Git/microsounds.github.io/static/style.css">
+	<script src="/home/microsounds/Git/microsounds.github.io/static/script.js"></script>
 	<title>404 Not Found | sentimental µsounds</title>
 </head>
 <body>
-<audio id="bgm" loop="true" hidden="true" type="audio/ogg" src="/static/wind1_loop.opus"></audio>
+<audio id="bgm" loop="true" hidden="true" type="audio/ogg" src="/home/microsounds/Git/microsounds.github.io/static/wind1_loop.opus"></audio>
 <div class="navbar">
-	<a href="/index.htm"><img class="avatar" alt="avatar" src="/static/avatar.png"></a>
+	<a href="/home/microsounds/Git/microsounds.github.io/index.htm"><img class="avatar" alt="avatar" src="/home/microsounds/Git/microsounds.github.io/static/avatar.png"></a>
 	<div class="container">
-		<div class="title"><a href="/index.htm">sentimental µsounds</a></div>
+		<div class="title"><a href="/home/microsounds/Git/microsounds.github.io/index.htm">sentimental µsounds</a></div>
 		<div class="subtitle">the echoes of time stand still</div>
 		<ul>
 			<li><a id="bgm_toggle" href="javascript:play()">♫ play</a></li>
 			<li><a href="https://github.com/microsounds">my github</a></li>
-			<li><a href="/notes/dotfiles.htm">my dotfiles</a></li>
-			<li><a href="/notes/index.htm">notes</a></li>
+			<li><a href="/home/microsounds/Git/microsounds.github.io/notes/dotfiles.htm">my dotfiles</a></li>
+			<li><a href="/home/microsounds/Git/microsounds.github.io/notes/index.htm">notes</a></li>
 		</ul>
 	</div>
 </div>
